# qTaggle

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  database.cpp  database.h  error.cpp  error.h  file.cpp  file.h  filetag.cpp  filetag.h  globals.h  main.cpp  schema.sql  tag.cpp  tag.h  utils.cpp  utils.h
src/app/gui/: filelist.cpp  filelist.h  filelist.ui  fileproperties.cpp  fileproperties.h  fileproperties.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  taglist.cpp  taglist.h  taglist.ui  tagproperties.cpp  tagproperties.h  tagproperties.ui
src/app/gui/dialog/: editfiledialog.cpp  editfiledialog.h  editfiledialog.ui  editfiledialogmulti.cpp  editfiledialogmulti.h  editfiledialogmulti.ui  edittagdialog.cpp  edittagdialog.h  edittagdialog.ui  edittagdialogmulti.cpp  edittagdialogmulti.h  edittagdialogmulti.ui  newfiledialog.cpp  newfiledialog.h  newfiledialog.ui  newtagdialog.cpp  newtagdialog.h  newtagdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/app/gui/docked/: filepreview.cpp  filepreview.h  filters.cpp  filters.h  filters.ui  properties.cpp  properties.h
src/app/gui/helper/: paginator.cpp  paginator.h  paginator.ui  plaintextlistedit.cpp  plaintextlistedit.h  taglineedit.cpp  taglineedit.h  tagselect.cpp  tagselect.h  tagselect.ui
src/app/gui/model/: filetablemodel.cpp  filetablemodel.h  taglistmodel.cpp  taglistmodel.h  tagtablemodel.cpp  tagtablemodel.h
src/app/icons/: icons.qrc
